reduce z-index availability, fix questions rendering

--- a/src/components/question/question.scss
+++ b/src/components/question/question.scss
@@ -79,7 +79,7 @@
   border-radius: 50%;
   align-self: flex-end;
   margin-top: -20px;
-  z-index: 5;
+  z-index: 1;
 }
 
 .offline {
